# robot-system

./: README.md  package.xml  pyproject.toml  setup.py
adapters/: unitree_a2.py
docs/: ROBOT_SDK.md
docs/a2/: multimedia.md
docs/a2_html/: A2-DDS.html  A2-ladir.html  A2-slam与导航.html  A2-多媒体服务.html  A2-常见错误.html  A2-底层服务.html  A2-时间同步.html  A2-设备状态.html  A2-运控切换.html  A2-错误码及含义.html  A2-高层运动.html
docs/a2_html/A2-slam与导航_files/: index-c027ffa6.css
docs/a2_html/A2-多媒体服务_files/: style-04128e16.css
docs/a2_html/A2-错误码及含义_files/: index-43fc315e.js.下载
docs/a2_html/A2-高层运动_files/: hm.js.下载
docs/plans/: 2026-05-22-a2-sdk-verify-plan.md
docs/superpowers/plans/: 2026-05-22-exploration-phase1.md  2026-05-23-data-platform-phase1.md  2026-05-24-dog-voice-v2-plan.md
docs/superpowers/specs/: 2026-05-22-a2-sdk-verify-design.md  2026-05-22-exploration-dog-design.md  2026-05-23-data-platform-design.md  2026-05-24-dog-voice-stack-v2-design.md
dog_voice_v2/: .gitignore  asr_engine.py  cloud_client.py  router.py  rules.yaml  test_integration.py  test_router.py  tts_generate.py
exploration/: data_logger.py  rc_bridge.py  train_ww.py  wake_dog_oww.py
exploration/launch/: exploration.launch.py
platform/: interfaces.py
src/robot_system/platform/: __init__.py
src/robot_system/robots/a2/: base.yaml  explore.yaml  multimedia_test.yaml
src/robot_system/robots/go2/: base.yaml
tests/: test_data_logger.py  test_rc_bridge.py
verify/: verify_cam.py  verify_lowstate.py  verify_sport.py
